force-app/main/default/objects/Opportunity/fields/Account_Lifetime_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifetime_Purchases__c</fullName>
    <formula>Account.Lifetime_Purchases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lifetime Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>