force-app/main/default/objects/Opportunity/fields/Account_Owner_18_Digit_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_18_Digit_User_ID__c</fullName>
    <description>Pulls in Account Owner&apos;s 18 digit user ID for reporting / Xactly purposes.</description>
    <formula>CASESAFEID(Account.OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner 18 Digit User ID</label>
    <type>Text</type>
</CustomField>