force-app/main/default/objects/Opportunity/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Used by Hubspot to distinguish Industrial Free Trials</description>
    <formula>Account.Record_Type_Stamp_for_Dupes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>