force-app/main/default/objects/Opportunity/fields/ACV_Amount_Multi_Currency__c.field-meta.xml
<CustomField>
    <fullName>ACV_Amount_Multi_Currency__c</fullName>
    <description>This field is created for big deal Alert emails to send USD amount if the currency is not USD - GTMS-16147</description>
    <label>ACV Amount Multi Currency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>