force-app/main/default/objects/Opportunity/fields/ACV_Bookings__c.field-meta.xml
<CustomField>
    <fullName>ACV_Bookings__c</fullName>
    <label>ACV Bookings Rollup</label>
    <summarizedField>OpportunityLineItem.ACV_Total_Price_Stamp__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_ACV__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>