force-app/main/default/objects/Opportunity/fields/ACV_Bookings_Copy__c.field-meta.xml
<CustomField>
    <fullName>ACV_Bookings_Copy__c</fullName>
    <description>Copies ACV from formula to currency field for forecasting.</description>
    <label>ACV Bookings Copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>