force-app/main/default/objects/Opportunity/fields/ACV_Commissionable_Dollars_Copy__c.field-meta.xml
<CustomField>
    <fullName>ACV_Commissionable_Dollars_Copy__c</fullName>
    <label>Commissionable Dollars ACV Copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>