force-app/main/default/objects/Opportunity/fields/ACV_List_Price__c.field-meta.xml
<CustomField>
    <fullName>ACV_List_Price__c</fullName>
    <formula>(List_Price__c / License_Term_Formula__c)*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>