force-app/main/default/objects/Opportunity/fields/Adjust_License_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjust_License_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Sys Admin and Sales Ops to make License Start Date != Close Date (can make sense for early renewals and co-terming issues)</description>
    <inlineHelpText>Confirm there are no items that require shipping on this opportunity</inlineHelpText>
    <label>Adjust License Start Date</label>
    <type>Checkbox</type>
</CustomField>