force-app/main/default/objects/Opportunity/fields/ADR_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR Transfer</label>
    <referenceTo>ADR_Transfer_Log__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>