force-app/main/default/objects/Opportunity/fields/AG4_License_Count__c.field-meta.xml
<CustomField>
    <fullName>AG4_License_Count__c</fullName>
    <description>Counts the amount of AG4 licenses.
Necessary to validate that reps do not mix up AG hardware and licenses.</description>
    <label>AG4 License Count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>equals</operation>
        <value>LIC-AG4-ENT,LIC-AG4T-EXPRESS,LIC-AG4T-EXPRESS-12MO,LIC-AG4-EXPRESS</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>