force-app/main/default/objects/Opportunity/fields/AG4_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>AG4_Unit_Count__c</fullName>
    <label>AG4 Unit Count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>contains</operation>
        <value>HW-AG4</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>