force-app/main/default/objects/Opportunity/fields/AG_unit_count__c.field-meta.xml
<CustomField>
    <fullName>AG_unit_count__c</fullName>
    <description>Sum of AG hardware product quantities in Opportunity Products</description>
    <label>AG unit count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>contains</operation>
        <value>HW-AG</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>