force-app/main/default/objects/Opportunity/fields/Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Amount_Number__c</fullName>
    <description>This is an auxiliary field that allows SFDC to rollup to the account level after having enabled multi-currencies.</description>
    <label>Amount Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>