force-app/main/default/objects/Opportunity/fields/Amount_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Number_Formula__c</fullName>
    <description>Useful for webhook APIs, as they do not accept currencies.</description>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>