force-app/main/default/objects/Opportunity/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>Payment received for products, freight, and tax. Field used for generating sales receipts.</description>
    <label>Amount Received</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>