force-app/main/default/objects/Opportunity/fields/Applied_for_Internal_Financing__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Internal_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be updated when rep submits for internal finance using “Apply for Internal Financing“ button on CPQ quote.</description>
    <label>Applied for Internal Financing</label>
    <type>Checkbox</type>
</CustomField>