force-app/main/default/objects/Opportunity/fields/Approval_Reminder_Field__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reminder_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-4549</description>
    <label>Approval Reminder Field</label>
    <type>Checkbox</type>
</CustomField>