force-app/main/default/objects/Opportunity/fields/Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Discount__c</fullName>
    <label>Approved Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>