force-app/main/default/objects/Opportunity/fields/Automation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Automation_Notes__c</fullName>
    <label>Automation Notes</label>
    <type>TextArea</type>
</CustomField>