force-app/main/default/objects/Opportunity/fields/Available_to_Renew__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Renew__c</fullName>
    <description>Created as part of GTMS-29264</description>
    <inlineHelpText>If contracts are consolidated, this field will show the sum of all the contracts &quot;Contract Renewable ACV.&quot; If not consolidated, it will display the &quot;Contract Renewable ACV&quot; of the renewed contract only.(Always in USD)</inlineHelpText>
    <label>Available to Renew</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>