force-app/main/default/objects/Opportunity/fields/Billing_360_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Billing_360_Manual_Override__c</fullName>
    <label>Billing 360 Manual Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>