force-app/main/default/objects/Opportunity/fields/Billing_360_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Billing_360_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing 360 Transaction</label>
    <type>Checkbox</type>
</CustomField>