force-app/main/default/objects/Opportunity/fields/Blended_Discount_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Blended_Discount_CPQ__c</fullName>
    <inlineHelpText>Displays the blended discount from the primary quote.</inlineHelpText>
    <label>Blended Discount (Primary Quote)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>