force-app/main/default/objects/Opportunity/fields/Bookings_Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Owner_Segment__c</fullName>
    <label>Bookings Owner Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>