force-app/main/default/objects/Opportunity/fields/BusDays_To_EOQ__c.field-meta.xml
<CustomField>
    <fullName>BusDays_To_EOQ__c</fullName>
    <formula>(5 * ( FLOOR( ( Current_EOQ__c+1 - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(  Current_EOQ__c+1  - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today() - DATE( 1900, 1, 8), 7 ) ) )
-
 Holidays_To_EOQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BusDays To EOQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>