force-app/main/default/objects/Opportunity/fields/Buyout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Amount__c</fullName>
    <description>updated the label for GTMS-26318</description>
    <formula>IF(SBQQ__PrimaryQuote__r.New_DC_architecture__c ,SBQQ__PrimaryQuote__r.Buyout_Amount__c*-1,Buyout_Opportunity__r.Rebate_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Buyouts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>