force-app/main/default/objects/Opportunity/fields/Buyout_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linking the rebate opportunity for buyouts to the revenue opportunity.</description>
    <inlineHelpText>Lookup field to link buyout opportunity</inlineHelpText>
    <label>Buyout Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity.Returning_Opportunity__r.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Buyout Opportunity</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>