force-app/main/default/objects/Opportunity/fields/Bypass_Validation_rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation rule</label>
    <type>Checkbox</type>
</CustomField>