force-app/main/default/objects/Opportunity/fields/Bypass_Validation_Rule_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule_DateTime__c</fullName>
    <description>GTMS-16271</description>
    <label>Bypass Validation Rule DateTime</label>
    <type>DateTime</type>
</CustomField>