force-app/main/default/objects/Opportunity/fields/Cable_Tool_Activated__c.field-meta.xml
<CustomField>
    <fullName>Cable_Tool_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field used to determine if the cable exchange tool should be activated for a Promo Opportunity</inlineHelpText>
    <label>Cable Tool Activated</label>
    <type>Checkbox</type>
</CustomField>