force-app/main/default/objects/Opportunity/fields/Camera_Only_Deal__c.field-meta.xml
<CustomField>
    <fullName>Camera_Only_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for reps to flag camera only deals (not including VG license)</description>
    <label>Camera Only Deal</label>
    <type>Checkbox</type>
</CustomField>