force-app/main/default/objects/Opportunity/fields/Can_Create__c.field-meta.xml
<CustomField>
    <fullName>Can_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a field for internal use. It helps preventing the user to create the first opportunity for the Account from outside the contact</description>
    <label>Can Create</label>
    <type>Checkbox</type>
</CustomField>