force-app/main/default/objects/Opportunity/fields/Checkout_Discount_Expiration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Discount_Expiration_Date_Time__c</fullName>
    <label>Express Discount Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>