force-app/main/default/objects/Opportunity/fields/Clari_Opp__c.field-meta.xml
<CustomField>
    <fullName>Clari_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clari Opp</label>
    <referenceTo>Clari_Opp__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>