force-app/main/default/objects/Opportunity/fields/Closed_Lost_Renewal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Renewal_Reason__c</fullName>
    <description>Closed Lost Reason required for renewals</description>
    <label>Risk/Loss Renewal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Technical Issues</fullName>
            </value>
            <value>
                <fullName>Product Value &amp; Fit</fullName>
            </value>
            <value>
                <fullName>Fleet Downsize &amp; Overpurchase</fullName>
            </value>
            <value>
                <fullName>Customer Financial Impact</fullName>
            </value>
            <value>
                <fullName>Competitive Pressure</fullName>
            </value>
            <value>
                <fullName>Relationship &amp; Experience</fullName>
            </value>
            <value>
                <fullName>Unresponsive / No Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Renewal admin issue</fullName>
                <label>Renewal Admin</label>
            </value>
            <value>
                <fullName>Adoption</fullName>
                <isActive>false</isActive>
                <label>Adoption</label>
            </value>
            <value>
                <fullName>Business changes</fullName>
                <isActive>false</isActive>
                <label>Business changes</label>
            </value>
            <value>
                <fullName>Commercial terms</fullName>
                <isActive>false</isActive>
                <label>Commercial terms</label>
            </value>
            <value>
                <fullName>Customer service</fullName>
                <isActive>false</isActive>
                <label>Customer service</label>
            </value>
            <value>
                <fullName>Dashboard / Reporting Issues</fullName>
                <isActive>false</isActive>
                <label>Dashboard / Reporting Issues</label>
            </value>
            <value>
                <fullName>Ease of doing business</fullName>
                <isActive>false</isActive>
                <label>Ease of doing business</label>
            </value>
            <value>
                <fullName>Missing Product Feature</fullName>
                <isActive>false</isActive>
                <label>Missing Product Feature</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Product Issues (Compatibility)</fullName>
                <isActive>false</isActive>
                <label>Product Issues (Compatibility)</label>
            </value>
            <value>
                <fullName>Product fit</fullName>
                <isActive>false</isActive>
                <label>Product fit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>