force-app/main/default/objects/Opportunity/fields/Closed_Lost_Renewal_Sub_reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Renewal_Sub_reason__c</fullName>
    <label>Risk/Loss Renewal Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Renewal_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance Issues</fullName>
            </value>
            <value>
                <fullName>Integration Issues</fullName>
            </value>
            <value>
                <fullName>Hardware Reliability</fullName>
            </value>
            <value>
                <fullName>Security/Compliance Gaps</fullName>
            </value>
            <value>
                <fullName>Connectivity Issues</fullName>
            </value>
            <value>
                <fullName>Onboarding &amp; Implementation Issues</fullName>
            </value>
            <value>
                <fullName>Low Adoption / Underutilization</fullName>
            </value>
            <value>
                <fullName>Low ROI / Value Realization</fullName>
            </value>
            <value>
                <fullName>Feature Gaps</fullName>
            </value>
            <value>
                <fullName>Missing 3rd Party Integration</fullName>
            </value>
            <value>
                <fullName>Fleet Downsize Due to Business Changes</fullName>
            </value>
            <value>
                <fullName>Overpurchase Due Customer Overprojection</fullName>
            </value>
            <value>
                <fullName>Overpurchased Due to Billing/Usage Transparency Issues</fullName>
            </value>
            <value>
                <fullName>Bankruptcy / Business Closure</fullName>
            </value>
            <value>
                <fullName>Merger &amp; Acquisition</fullName>
            </value>
            <value>
                <fullName>Budget Cuts / Cost Reduction</fullName>
            </value>
            <value>
                <fullName>Competitive Price Pressure</fullName>
            </value>
            <value>
                <fullName>Competitor Commercial Terms</fullName>
            </value>
            <value>
                <fullName>Vendor Tool Consolidation</fullName>
            </value>
            <value>
                <fullName>Technical Support Experience</fullName>
            </value>
            <value>
                <fullName>Sales/Renewal Experience</fullName>
            </value>
            <value>
                <fullName>Customer Success Experience</fullName>
            </value>
            <value>
                <fullName>Billing Experience</fullName>
            </value>
            <value>
                <fullName>New Leader Preference</fullName>
            </value>
            <value>
                <fullName>Unresponsive / No Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Consolidated renewal</fullName>
                <label>Consolidated Renewal</label>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Previously churned</fullName>
                <label>Non-Renewable Contract</label>
            </value>
            <value>
                <fullName>Account Executive experience</fullName>
                <isActive>false</isActive>
                <label>Account Executive experience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>