force-app/main/default/objects/Opportunity/fields/CM2_License_Count__c.field-meta.xml
<CustomField>
    <fullName>CM2_License_Count__c</fullName>
    <description>Counts the amount of CM2 licenses. 
Necessary to validate that reps do not mix up CMs hardware and licenses.</description>
    <label>CM2 License Count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>equals</operation>
        <value>LIC-CM2-ENT,LIC-CM2-EXPRESS,	LIC-CM2-EXPRESS-12MO,LIC-CM-STRM</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>