force-app/main/default/objects/Opportunity/fields/CM_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>CM_Unit_Count__c</fullName>
    <label>CM Unit Count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>startsWith</operation>
        <value>HW-CM</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>