force-app/main/default/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>GTMS-10562, Used to map the value on Commercial Invoice object</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>